contrast errors are fixed

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 :root {
   --dark-blue: #1f2433;
-  --deep-orange: #e55a2a;
+  --deep-orange:#d04c1c;
   --deep-blue: #2b59ae;
-  --warm-white: #fffdf8;
+  --warm-white: #fffff9;
   --srk-blue-transparent: #1f243399;
   --font-inter: "Inter", sans-serif;
 }
@@ -29,7 +29,15 @@ main {
   background-size: cover;
   z-index: -1; /* Envía el fondo detrás del contenido */
 }
-
+.fixed-background::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 22, 0.1); 
+}
 /*Styles for Navbar*/
 .navbar {
   display: flex;
@@ -395,6 +403,7 @@ a {
     align-self: center;
     display: block;
     font-size: 14px;
+    padding: 8px 10px;
   }
   .main__section-icons {
     display: block;
